# simple_mlp

./: Cargo.toml  LICENSE  README.md  weights.pt
config/: Default.toml
dataset/: x_concat.pt  x_labels.pt  y_concat.pt  y_concat_unlabeled.pt  y_labels.pt
src/: lib.rs  main.rs  settings.rs
src/gnn/: mlp.rs  mod.rs  prediction.rs
